/*
 * © 2020. TU Dortmund University,
 * Institute of Energy Systems, Energy Efficiency and Energy Economics,
 * Research group Distribution grid planning and operation
*/
package edu.ie3.models;

public enum PowerSystemLoadProfileType implements LoadProfileType {
// TODO fill me :(
}
